<?xml version="1.0" encoding="utf-8"?>
<resources>

     
    <string name="app_name">Home Work</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
   
    <string name="action_search">Search</string>
    <string name="action_about">About</string>
    <string name="action_share">Share</string>
    <string name="action_help">Help</string>
    <string name="share">Share</string>
 	<string name="sent_to">Sent to</string>
 	
 	<string name="activity_about">About</string>
 	<string name="activity_detail">Detail</string>
 	<string name="activity_help">Help</string>
 	<string name="activity_main">Main</string>
 
 
 	<string name="text_nomor">"nomor "</string>
 	<string name="text_doa"> "doa"</string>
 	<string name="text_jumlah"> "jumlah"</string>
 	<string name="text_waktu"> "waktu"</string>
 	<string name="text_keutamaan"> "keutamaan"</string>
 	<string name="text_riwayat"> "riwayat"</string>
 	<string name="text_arti"> "arti"</string>
 	
 	<string name="title_nomor">"nomor "</string>
 	<string name="title_doa"> "doa"</string>
 	<string name="title_jumlah"> "jumlah"</string>
 	<string name="title_waktu"> "waktu"</string>
 	<string name="title_keutamaan"> "keutamaan"</string>
 	<string name="title_riwayat"> "riwayat"</string>
 	<string name="title_arti"> "arti"</string>
 	
 	<string name="prakata"> "Prakata :"</string>
 	<string name="help"> "Help Me"</string>
 	<string name="kritk_saran"> "Apabila ada kritik dan saran, mohon kirimkan kritik dan saran anda melalui alamat email wachid.sst@gmail.com"</string>
 	<string name="about_homework"> "Alhamdulillahirobbil alamin, segala puji bagi allah yang telah memberikan kesempatan untuk membuat aplikasi ini, apabila ada kritik dan saran, mohon kirimkan kritik dan saran anda melalui alamat email wachid.sst@gmail.com"</string>
 	<string name="tahun">2014</string>
 	<string name="All_right">All rights reserved</string>
 	<string name="home_work_13">Home Work 13</string>
 	<string name="version">Version 1.1.1</string>
 	<string name="home_work">Home Work</string>
 	
 	


</resources>
